force-app/main/default/objects/TSGADX__Deal__c/fields/Monthly_Service_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Service_Payment__c</fullName>
    <formula>IF(OR(Target_Mono_CPP__c &gt; 0,Target_Color_CPP__c &gt; 0),Total_BW_Monthly_Service__c+Total_Color_Monthly_Service__c,
TSGCFG__Quote__r.TSGCFG__MPSMonthlyServicePayment__c + TSGCFG__Quote__r.TSGCFG__PrinterMonthlyServicePayment__c + TSGCFG__Quote__r.TSGCFG__ProdMonthlyServicePayment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Service Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>