force-app/main/default/objects/TSGADX__Deal__c/fields/MPS_Board_Credit__c.field-meta.xml
<CustomField>
    <fullName>MPS_Board_Credit__c</fullName>
    <inlineHelpText>Enter the amount of MPS Revenue included in deal revenue that is eligable for Rep Board Credit for Commissions.</inlineHelpText>
    <label>MPS Board Credit $</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>