force-app/main/default/objects/TSGADX__Deal__c/fields/MPS_MNS_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>MPS_MNS_Inclusive__c</fullName>
    <inlineHelpText>Choose all types that are inclusive to deal revenues.</inlineHelpText>
    <label>Managed Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPS</fullName>
            </value>
            <value>
                <fullName>MNS</fullName>
            </value>
            <value>
                <fullName>Shred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>