force-app/main/default/objects/TSGADX__Deal__c/fields/MRR_BOT_Sales_Credit__c.field-meta.xml
<CustomField>
    <fullName>MRR_BOT_Sales_Credit__c</fullName>
    <formula>((IT_MRR__c + Security_Services_MRR__c + Backup_Services_MRR__c+ VOIP_UCC_MRR__c ) *  MRR_Term__c) +  IT_Block_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR-BOT Sales Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>