force-app/main/default/objects/TSGADX__Deal__c/fields/MRR_Term__c.field-meta.xml
<CustomField>
    <fullName>MRR_Term__c</fullName>
    <label>MRR Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>