force-app/main/default/objects/TSGADX__Deal__c/fields/Net_Lease_BT_del__c.field-meta.xml
<CustomField>
    <fullName>Net_Lease_BT_del__c</fullName>
    <formula>00N3600000EfDzu.00N1R00000TVwEE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>