force-app/main/default/objects/TSGADX__Deal__c/fields/Net_New_Comp__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Comp__c</fullName>
    <formula>IF( ISPICKVAL( TSGADX__Type__c , &apos;New Placement&apos;), Rep_Margin__c  * 0.05, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Deal Type is New Placement, rep will receive additional 5% GP commission.</inlineHelpText>
    <label>Net New Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>