force-app/main/default/objects/TSGADX__Deal__c/fields/Net_Sale_Revenue_Deal__c.field-meta.xml
<CustomField>
    <fullName>Net_Sale_Revenue_Deal__c</fullName>
    <formula>IF( TSGCFG__Quote__r.OLDNetSaleRevenue__c &gt;0,TSGCFG__Quote__r.OLDNetSaleRevenue__c,  TSGADX__Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales Rep Revenue Credit from all applicable items in configurator or from manual input in Amount $ if configurator was not used.</inlineHelpText>
    <label>Net Sale Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>