force-app/main/default/objects/TSGADX__Deal__c/fields/Net_Sale_Revenue_Deal_del__c.field-meta.xml
<CustomField>
    <fullName>Net_Sale_Revenue_Deal_del__c</fullName>
    <formula>IF( 00N3600000EfDzu.00N1R00000TVwEE &gt;0,00N3600000EfDzu.00N1R00000TVwEE,  TSGADX__Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales Rep Revenue Credit from all applicable items in configurator or from manual input in Amount $ if configurator was not used.</inlineHelpText>
    <label>Net Sale Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>