force-app/main/default/objects/TSGADX__Deal__c/fields/Old_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_ID__c</fullName>
    <description>Old ID from previous Version.</description>
    <inlineHelpText>Old ID from previous Version</inlineHelpText>
    <label>Old ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>