force-app/main/default/objects/TSGADX__Deal__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <description>Once deal is closed Won, Field is set to Submitted and is updated by Admin according to order progress.</description>
    <inlineHelpText>**Don&apos;t Delete-Rohan**  Once deal is closed Won, Field is set to Submitted and is updated by Admin according to order progress.</inlineHelpText>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for EA</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Billed</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <isActive>false</isActive>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>In Setup</fullName>
                <isActive>false</isActive>
                <label>In Setup</label>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
                <isActive>false</isActive>
                <label>Out for Delivery</label>
            </value>
            <value>
                <fullName>Pending Delivery</fullName>
                <isActive>false</isActive>
                <label>Pending Delivery</label>
            </value>
            <value>
                <fullName>Received</fullName>
                <isActive>false</isActive>
                <label>Received</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <isActive>false</isActive>
                <label>Scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>