force-app/main/default/objects/TSGADX__Deal__c/fields/Other_Services__c.field-meta.xml
<CustomField>
    <fullName>Other_Services__c</fullName>
    <label>Other Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Water Filtration</fullName>
            </value>
            <value>
                <fullName>VOIP Phones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>