force-app/main/default/objects/TSGADX__Deal__c/fields/Other_services_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Other_services_Revenue__c</fullName>
    <label>Other services Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>