force-app/main/default/objects/TSGADX__Deal__c/fields/Overall_BW_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overall_BW_Overage_Rate__c</fullName>
    <formula>Total_BW_Monthly_Service__c/Total_BW_Monthly_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall BW Overage Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>