force-app/main/default/objects/TSGADX__Deal__c/fields/Overall_Color_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overall_Color_Overage_Rate__c</fullName>
    <formula>Total_Color_Monthly_Service__c/TotalColorMonthlyVolume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Color Overage Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>