force-app/main/default/objects/TSGADX__Deal__c/fields/Overdue_Alert_Popup__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Alert_Popup__c</fullName>
    <formula>Month( TSGADX__Close_Date__c )= Month(Today()) &amp;&amp;   
TSGADX__Close_Date__c &lt; TODAY() &amp;&amp;
NOT(ISPICKVAL(  TSGADX__Forecast_Category__c  , &quot;Omitted&quot;)) &amp;&amp;
NOT(ISPICKVAL(TSGADX__Forecast_Category__c, &quot;Closed&quot;))</formula>
    <label>Overdue Alert Popup</label>
    <type>Checkbox</type>
</CustomField>