force-app/main/default/objects/TSGADX__Deal__c/fields/Override_to_Comp__c.field-meta.xml
<CustomField>
    <fullName>Override_to_Comp__c</fullName>
    <inlineHelpText>Enter value of commission override here, normal number for additional comp and negative number to subtract from displayed commission.</inlineHelpText>
    <label>Override to Comp</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>