force-app/main/default/objects/TSGADX__Deal__c/fields/Owner_Picture__c.field-meta.xml
<CustomField>
    <fullName>Owner_Picture__c</fullName>
    <formula>IMAGE(&quot;https://demoagentdealer--c.documentforce.com/servlet/rtaImage?eid=00536000001ZFgl&amp;feoid=00N1R00000TXEOZ&amp;refid=0EM1R000006Uhuj&quot;,OwnerName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Picture</label>
    <type>Text</type>
</CustomField>