force-app/main/default/objects/TSGADX__Deal__c/fields/OwnerPhone__c.field-meta.xml
<CustomField>
    <fullName>OwnerPhone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerPhone</label>
    <type>Text</type>
</CustomField>