force-app/main/default/objects/TSGADX__Deal__c/fields/Pain_Win__c.field-meta.xml
<CustomField>
    <fullName>Pain_Win__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pain-Win</label>
    <type>Checkbox</type>
</CustomField>