force-app/main/default/objects/TSGADX__Deal__c/fields/Pen_Test__c.field-meta.xml
<CustomField>
    <fullName>Pen_Test__c</fullName>
    <label>Pen Test</label>
    <length>50</length>
    <type>Text</type>
</CustomField>