force-app/main/default/objects/TSGADX__Deal__c/fields/Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services__c</fullName>
    <label>Professional Services</label>
    <summarizedField>TSGCFG__Quote__c.Professional_Services__c</summarizedField>
    <summaryFilterItems>
        <field>TSGCFG__Quote__c.TSGCFG__Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TSGCFG__Quote__c.TSGCFG__Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>