force-app/main/default/objects/TSGADX__Deal__c/fields/Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Solution__c</fullName>
    <label>Proposed Solution</label>
    <type>TextArea</type>
</CustomField>