force-app/main/default/objects/TSGADX__Deal__c/fields/PTR_Monitor__c.field-meta.xml
<CustomField>
    <fullName>PTR_Monitor__c</fullName>
    <formula>IF( Pull_Through_Ratio__c &gt; 0.14, IMAGE(&quot;/resource/TSGADX__GreenFlag&quot;,&quot;&quot;),
IF(Pull_Through_Ratio__c &lt; 0.14, IMAGE(&quot;/resource/TSGADX__RedFlag&quot;,&quot;&quot;), IMAGE(&quot;/resource/TSGADX__YellowFlag&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTR Monitor</label>
    <type>Text</type>
</CustomField>