force-app/main/default/objects/TSGADX__Deal__c/fields/Pull_Through_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Pull_Through_Ratio__c</fullName>
    <formula>IT_Block_Time__c / Total_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pull Through Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>