force-app/main/default/objects/TSGADX__Deal__c/fields/QQ_Total_Lease_Service__c.field-meta.xml
<CustomField>
    <fullName>QQ_Total_Lease_Service__c</fullName>
    <description>QQ Total of Monthly Lease and Service Payment</description>
    <formula>TSGCFG__Monthly__c +  TSGCFG__CPC_Monthly_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of Monthly Lease and Service Payment</inlineHelpText>
    <label>Total Lease / Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>