force-app/main/default/objects/TSGADX__Deal__c/fields/Recurring_Comp__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Comp__c</fullName>
    <formula>IF( Recurring_End_Date__c &lt; TODAY(), 0, (TSGADX__IT_Services_Revenue__c * 0.01)+(MPS_Board_Credit__c * 0.01)+( Shred_Rep_Board_Credit__c * 0.01))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount to be paid on a monthly Recurring Basis as commission for this deal until Recurring End Date.</inlineHelpText>
    <label>Recurring Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>