force-app/main/default/objects/TSGADX__Deal__c/fields/Recurring_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurring_End_Date__c</fullName>
    <inlineHelpText>Enter the last date that recurring commission for this deal should be paid.</inlineHelpText>
    <label>Recurring End Date</label>
    <type>Date</type>
</CustomField>