force-app/main/default/objects/TSGADX__Deal__c/fields/Recurring_Last_Paid__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Last_Paid__c</fullName>
    <inlineHelpText>Date of last time recurring commission was paid to rep.</inlineHelpText>
    <label>Recurring Last Paid</label>
    <type>Date</type>
</CustomField>