force-app/main/default/objects/TSGADX__Deal__c/fields/Rep_Board_Credit__c.field-meta.xml
<CustomField>
    <fullName>Rep_Board_Credit__c</fullName>
    <description>Rep Revenue Credit that applies to Quota and Commissions</description>
    <formula>TSGCFG__Quote__r.Rep_Board_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rep Revenue Credit that applies to Quota and Commissions</inlineHelpText>
    <label>Rep Board Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>