force-app/main/default/objects/TSGADX__Deal__c/fields/Rep_GP__c.field-meta.xml
<CustomField>
    <fullName>Rep_GP__c</fullName>
    <description>% of GP over Rep Cost on deal.</description>
    <formula>TSGCFG__Quote__r.TSGCFG__Total_Rep_Margin__c  /  TSGCFG__Quote__r.TSGCFG__Total_Rep_Cost__c</formula>
    <inlineHelpText>% of GP over Rep Cost on deal.</inlineHelpText>
    <label>Rep Deal GP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>