force-app/main/default/objects/TSGADX__Deal__c/fields/Rep_Margin__c.field-meta.xml
<CustomField>
    <fullName>Rep_Margin__c</fullName>
    <formula>TSGCFG__Quote__r.TSGCFG__Total_Rep_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Margin $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>