force-app/main/default/objects/TSGADX__Deal__c/fields/Revenue_BT_c_del__c.field-meta.xml
<CustomField>
    <fullName>Revenue_BT_c_del__c</fullName>
    <formula>Net_Lease_BT_del__c / Deal_Rate_BT__c</formula>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>