force-app/main/default/objects/TSGADX__Deal__c/fields/Revenue_Growth__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Growth__c</fullName>
    <description>Use to record and export text in this area to proposal template.</description>
    <inlineHelpText>Use to record and export text in this area to proposal template.</inlineHelpText>
    <label>Revenue Growth</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>