force-app/main/default/objects/TSGADX__Deal__c/fields/Risk_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation__c</fullName>
    <description>Use to record and export text in this area to proposal template.</description>
    <inlineHelpText>Use to record and export text in this area to proposal template.</inlineHelpText>
    <label>Risk Mitigation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>