force-app/main/default/objects/TSGADX__Deal__c/fields/Secondary_Rep__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please choose rep who will receive split commission %.</inlineHelpText>
    <label>Secondary Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>