force-app/main/default/objects/TSGADX__Deal__c/fields/Secondary_Rep_Comp__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Rep_Comp__c</fullName>
    <formula>IF( Split_Percentage__c = NULL, 0,  (Rep_GP_Comp__c +  Net_New_Comp__c +  Override_to_Comp__c)  *  Split_Percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Rep Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>