force-app/main/default/objects/TSGADX__Deal__c/fields/Security_Monitoring_Solution__c.field-meta.xml
<CustomField>
    <fullName>Security_Monitoring_Solution__c</fullName>
    <label>Security Monitoring Solution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>