force-app/main/default/objects/TSGADX__Deal__c/fields/Service_Base_Billing__c.field-meta.xml
<CustomField>
    <fullName>Service_Base_Billing__c</fullName>
    <label>Service Base Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Billing All</fullName>
            </value>
            <value>
                <fullName>Base Pass Thru-Internal Overages</fullName>
            </value>
            <value>
                <fullName>Base and Overage Pass Thru</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>