force-app/main/default/objects/TSGADX__Deal__c/fields/Service_Buyout_BT__c.field-meta.xml
<CustomField>
    <fullName>Service_Buyout_BT__c</fullName>
    <inlineHelpText>Enter the amount of Service to be bought out in new deal.</inlineHelpText>
    <label>Service Buyout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>