force-app/main/default/objects/TSGADX__Deal__c/fields/Service_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Type__c</fullName>
    <label>Service Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MFP All Inclusive</fullName>
            </value>
            <value>
                <fullName>Managed Print Services</fullName>
            </value>
            <value>
                <fullName>Partner Supplied</fullName>
            </value>
            <value>
                <fullName>Managed IT Services</fullName>
            </value>
            <value>
                <fullName>Shred Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>