force-app/main/default/objects/TSGADX__Deal__c/fields/Signature_Received__c.field-meta.xml
<CustomField>
    <fullName>Signature_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Received</label>
    <type>Checkbox</type>
</CustomField>