force-app/main/default/objects/TSGADX__Deal__c/fields/Silver_MM_Support__c.field-meta.xml
<CustomField>
    <fullName>Silver_MM_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Silver Level Mail Machine Support Plan</description>
    <inlineHelpText>Silver Level Mail Machine Support Plan</inlineHelpText>
    <label>Silver MM Support</label>
    <type>Checkbox</type>
</CustomField>