force-app/main/default/objects/TSGADX__Deal__c/fields/Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Survey</label>
    <type>Checkbox</type>
</CustomField>