force-app/main/default/objects/TSGADX__Deal__c/fields/sskad__Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>sskad__Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>