force-app/main/default/objects/TSGADX__Deal__c/fields/sskad__Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>sskad__Total_Commissions__c</fullName>
    <label>Total Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>