force-app/main/default/objects/TSGADX__Deal__c/fields/Standard_MM_Support__c.field-meta.xml
<CustomField>
    <fullName>Standard_MM_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Base Level Mail Machine Support Plan</description>
    <inlineHelpText>Base Level Mail Machine Support Plan</inlineHelpText>
    <label>Standard MM Support</label>
    <type>Checkbox</type>
</CustomField>