force-app/main/default/objects/TSGADX__Deal__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Office Color</fullName>
            </value>
            <value>
                <fullName>Production Mono</fullName>
            </value>
            <value>
                <fullName>Production Color</fullName>
            </value>
            <value>
                <fullName>Low End Mono (&lt;30)</fullName>
            </value>
            <value>
                <fullName>Mid Volume Mono (30-50)</fullName>
            </value>
            <value>
                <fullName>Departmental Mono (50+)</fullName>
            </value>
            <value>
                <fullName>Managed Print Services (&lt;25,000)</fullName>
            </value>
            <value>
                <fullName>Managed Print Services (&gt;25,000)</fullName>
            </value>
            <value>
                <fullName>Postage/Mailing</fullName>
            </value>
            <value>
                <fullName>Smart Search</fullName>
            </value>
            <value>
                <fullName>Wide Format</fullName>
            </value>
            <value>
                <fullName>3rd Party Product</fullName>
            </value>
            <value>
                <fullName>Managed Network Services</fullName>
            </value>
            <value>
                <fullName>Audio Visual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>