force-app/main/default/objects/TSGADX__Deal__c/fields/Submit_to_EA__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_EA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin Only, check box to send quote line item details to EAutomate as a Quote.</description>
    <inlineHelpText>Admin Only, check box to send quote line item details to EAutomate as a Quote.</inlineHelpText>
    <label>Submit to EA</label>
    <type>Checkbox</type>
</CustomField>