force-app/main/default/objects/TSGADX__Deal__c/fields/Submit_to_SSK__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_SSK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit to SSK</label>
    <type>Checkbox</type>
</CustomField>