force-app/main/default/objects/TSGADX__Deal__c/fields/Submitted_For_Funding__c.field-meta.xml
<CustomField>
    <fullName>Submitted_For_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted For Funding</label>
    <type>Checkbox</type>
</CustomField>