force-app/main/default/objects/TSGADX__Deal__c/fields/Submitted_for_Signature__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted for Signature</label>
    <type>Checkbox</type>
</CustomField>