force-app/main/default/objects/TSGADX__Deal__c/fields/Subscription_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Revenue__c</fullName>
    <description>Amount of Bundled Term or MRR subscription revenue in the deal.</description>
    <inlineHelpText>Amount of Bundled Term or MRR subscription revenue in the deal.</inlineHelpText>
    <label>Subscription Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>