force-app/main/default/objects/TSGADX__Deal__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <description>Is the subscription for the term bundled into sales price/lease or will it be billed as MRR monthly.</description>
    <inlineHelpText>Is the subscription for the term bundled into sales price/lease or will it be billed as MRR monthly.</inlineHelpText>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bundled Subscription</fullName>
            </value>
            <value>
                <fullName>MRR Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>