force-app/main/default/objects/TSGADX__Deal__c/fields/Target_Mono_CPP__c.field-meta.xml
<CustomField>
    <fullName>Target_Mono_CPP__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the Desired Mono CPP Rate for Blended Cost Adjustment to proposed Service Program Pricing.</inlineHelpText>
    <label>Target Mono CPP</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>