force-app/main/default/objects/TSGADX__Deal__c/fields/TaskRay_Project_Template__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Project_Template__c</fullName>
    <label>TaskRay Project Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>