force-app/main/default/objects/TSGADX__Deal__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <formula>TSGADX__Company__r.Tax_ID__c</formula>
    <label>Tax ID</label>
    <type>Text</type>
</CustomField>