force-app/main/default/objects/TSGADX__Deal__c/fields/Total_Annual_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Maintenance__c</fullName>
    <description>Total of Mail Machine Annual Maintenance included in Deal</description>
    <formula>TSGCFG__Quote__r.MM_Annual_Maintenance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of Mail Machine Annual Maintenance included in Deal</inlineHelpText>
    <label>Total Annual Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>