force-app/main/default/objects/TSGADX__Deal__c/fields/Total_BW_Monthly_Service__c.field-meta.xml
<CustomField>
    <fullName>Total_BW_Monthly_Service__c</fullName>
    <formula>IF(Target_Mono_CPP__c == 0,
TSGCFG__Quote__r.TSGCFG__MFP_Total_BW_Monthly_Cost__c + (TSGCFG__Quote__r.TSGCFG__ProdTotalMonoVolume__c*TSGCFG__Quote__r.TSGCFG__Prod_B_W_CPC__c)+(TSGCFG__Quote__r.TSGCFG__PrinterTotalMonoVolume__c*TSGCFG__Quote__r.TSGCFG__PrinterBWCPC__c),
(Target_Mono_CPP__c*Total_BW_Monthly_Volume__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Total of ALL BW Service</inlineHelpText>
    <label>Total BW Monthly Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>