force-app/main/default/objects/TSGADX__Deal__c/fields/Total_BW_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_BW_Monthly_Volume__c</fullName>
    <formula>TSGCFG__Quote__r.TSGCFG__MPSTotalMonoVolume__c+TSGCFG__Quote__r.TSGCFG__PrinterTotalMonoVolume__c+TSGCFG__Quote__r.TSGCFG__ProdTotalMonoVolume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of MFP, Printer and Production BW Volume</inlineHelpText>
    <label>Total BW Monthly Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>